<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_library"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/main_library"
        android:icon="@drawable/ic_library_music_black_24dp"
        />
    <item
        android:id="@+id/navigation_home"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/main_home"
        android:icon="@drawable/ic_home_black_24dp"
        />
    <item
        android:id="@+id/navigation_menu"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/main_menu"
        android:icon="@drawable/ic_menu_black_24dp"
        />
</menu>