<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/HeaderTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/drawer_audiobook_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/system_null"
            android:minWidth="96dp"
            android:minHeight="96dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/drawer_audiobook_title"
                style="@style/InfoAudioBookTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audiobook_title" />

            <TextView
                android:id="@+id/drawer_audiobook_author"
                style="@style/InfoAuthorTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audiobook_author" />

            <TextView
                android:id="@+id/drawer_audiobook_date"
                style="@style/InfoDateTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audiobook_date"/>

            <TextView
                android:id="@+id/drawer_audiobook_progress"
                style="@style/InfoProgressTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audiobook_progress"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer_audiobook_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:menu="@menu/menu_drawer_audiobook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>