<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/info_audiobook_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="160dp"
            android:minHeight="160dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="0dp">

            <TextView
                android:id="@+id/info_audiobook_title"
                style="@style/InfoAudioBookTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audiobook_title" />

            <TextView
                android:id="@+id/info_audiobook_author"
                style="@style/InfoAuthorTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audiobook_author" />

            <TextView
                android:id="@+id/info_audiobook_date"
                style="@style/InfoDateTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audiobook_date" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/info_audiobook_progress"
                    style="@style/InfoProgressTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/audiobook_progress"
                    app:layout_constraintBottom_toTopOf="@+id/info_audiobook_progresbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/info_audiobook_progresbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_info_play"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/home_audiobook_play"
            android:theme="@style/ButtonTheme"
            app:icon="@drawable/ic_play_circle_outline_black_24dp"
            app:iconTint="@color/colorContainerButtonContent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_info_menu"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/info_audiobook_option"
            android:theme="@style/OutlineButtonTheme"
            app:icon="@drawable/ic_more_horiz_black_24dp"
            app:iconTint="@color/colorPrimary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>